--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta name="description" content=" Discover how to convert images to 3000 x 3000 pixels using our detailed guide & Learn about the benefits.">
  <meta name="robots" content="index,follow"> 
   <link rel="canonical" href="https://resizehood.pages.dev">
-  
+  <meta name="google-site-verification" content="UcaSzSiCroNo8qE8YrDSvYlnk2_uWZhs3xyj99s4vHw" />
+ 
   <style>
     body {
       font-family: Arial, sans-serif;
